--- a/.github/workflows/static-zip-uploader.yml
+++ b/.github/workflows/static-zip-uploader.yml
@@ -45,4 +45,4 @@ jobs:
         run: |
           wget https://github.com/DGP-Automation/Static.Uploader/releases/latest/download/static-uploader
           chmod +x ./static-uploader
-          ./static-uploader --type zip --target /tx --overwrite
+          ./static-uploader --type zip --target /tx/tiny-zip --overwrite
